Add note on project deprecation

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+# DEPRECATED
+
+This repository was archived in favor of https://usb-descryptor.github.io
+
+
 == ABOUT
 
 USBDescriptorKitchen is a GUI-driven tool that helps developers of USB
